ora tutte le variabili di atom-ui sono disponibili per l'utilizzo nella webview

--- a/styles/atom-whatsapp.less
+++ b/styles/atom-whatsapp.less
@@ -5,8 +5,22 @@
 @import "ui-variables";
 @import "syntax-variables";
 .atom-whatsapp {
-  --app-background-color:@app-background-color;
+  --atom-app-background-color:@app-background-color;
+  --atom-background-color-info:@background-color-info;
+  --atom-background-color-success:@background-color-success;
+  --atom-background-color-warning:@background-color-warning;
+  --atom-background-color-error:@background-color-error;
+  --atom-background-color-highlight:@background-color-highlight;
+  --atom-background-color-selected:@background-color-selected;
+  --atom-app-background-color:@app-background-color;
+  --atom-text-color:@text-color;
+  --atom-text-color-subtle:@text-color-subtle;
+  --atom-text-color-highlight:@text-color-highlight;
+  --atom-text-color-selected:@text-color-selected;
+  --atom-text-color-info:@text-color-info;
+  --atom-text-color-success:@text-color-success;
+  --atom-text-color-warning:@text-color-warning;
+  --atom-text-color-error:@text-color-error;
 
-  --pain :#afafaf;
 
 }
