colorini almeno alcuni

--- a/styles/atom-whatsapp.less
+++ b/styles/atom-whatsapp.less
@@ -21,6 +21,5 @@
   --atom-text-color-success:@text-color-success;
   --atom-text-color-warning:@text-color-warning;
   --atom-text-color-error:@text-color-error;
-
-
+  --atom-button-background-color-selected:@button-background-color-selected;
 }
